--- a/frontend/src/Header/style.module.css
+++ b/frontend/src/Header/style.module.css
@@ -14,6 +14,8 @@
     padding: 7px;
     height: 15vh;
     background-color: rgb(242, 250, 252);
+    position: sticky;
+    top: 0;
 }
 
 .header > .profilePictures {
@@ -52,7 +54,6 @@
     border: 0;
     font-size: 1.3rem;
     outline: none;
-    background-color: rgb(237, 237, 250);
     background-color: rgb(237, 237, 250);
     
 }
