--- a/frontend/src/Editing/style.module.css
+++ b/frontend/src/Editing/style.module.css
@@ -12,11 +12,29 @@
     width: 85vw;
     height: 85vh;
     background-color: rgb(242, 250, 252);
-
+    
 }
 .profileImg img{
     border-radius: 100px ;
     height: 150px;
+    position: relative;
+    
+    
+}
+.profileImg .icon{
+    border:0.1px solid  rgb(178, 181, 244) ;
+    border-radius: 100px;
+    font-size: 2rem;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    padding: 13px;
+    position: relative;
+    z-index: 1;
+    margin-top: -50px;
+    background-color: rgba(255, 255, 255, 0.6);
+
+    /* background-color: rgb(242, 250, 252); */
 }
 .profileImg .cgProfile{
     height: 150px;
