--- a/frontend/src/Outbox/style.module.css
+++ b/frontend/src/Outbox/style.module.css
@@ -45,6 +45,7 @@
 .outbox table tr .name {
     width: 10vw;
     font-size: 2rem;
+    overflow: hidden;
     
 }
 
@@ -64,6 +65,8 @@
 .outbox table tr .date {
     width: 10vw;
     font-size: 1.5rem;
+    overflow: hidden;
+
 
 }
 
