--- a/frontend/src/Header/style.module.css
+++ b/frontend/src/Header/style.module.css
@@ -41,7 +41,7 @@
     font-size: 1rem;
 }
 
-.header .input {
+/* .header .input {
     border-radius: 50px;
     padding-left:25px ;
     width: 60vw;
@@ -56,7 +56,7 @@
     outline: none;
     background-color: rgb(237, 237, 250);
     
-}
+} */
 
 .imgChat img{
     width: 70px;
@@ -64,10 +64,10 @@
     border-radius: 100%;
 }
 
-@media (width < 900px) {
+/* @media (width < 900px) {
     .header input {
         
         width: 45vw;
     }
     
-}
+} */
