--- a/frontend/src/Content/style.module.css
+++ b/frontend/src/Content/style.module.css
@@ -1,14 +1,83 @@
-*  {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.content{
+.content {
+  display: flex;
+  background-color: rgb(242, 250, 252);
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.newEmail {
+  position: absolute;
+  bottom: 15px;
+  left: 20vw;
+  height: 60vh;
+  width: 35vw;
+  background-color: rgb(242, 250, 252);
+  color: rgb(237, 237, 250);
+  /* border: 1px solid black; */
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); /* הגדרת הצל: גובה, רוחב, עוצמה, צבע */
+  
+}
+.newEmail .email {
     display: flex;
-    background-color: rgb(242, 250, 252);
-    padding-left: 25px;
-    padding-right: 25px;
+    justify-content: space-between;
+    align-items: center;
+    height: 10%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    /* background-color: rgb(199, 199, 247); */
+    color: black;
+    padding: 10px;
+    background-color: rgb(237, 237, 250);
+    font-weight: bold;
+    font-family: 'Poppins', sans-serif;
+    
+}
+.newEmail .email div {
+    /* background-color: rgb(14, 14, 48); */
 
+}
+.newEmail .email button {
+
+    width: 10%;
+    font-size: 1.5rem;
+    padding-bottom: 28px;
+
+}
+.newEmail .to {
+    height: 10%;
+    border: 0;
+    outline: none;
+    border-bottom: 1px solid rgb(237, 237, 250);
+    background-color: rgb(242, 250, 252);
+}
+.newEmail .title {
+    height: 10%;
+    border: 0;
+    outline: none;
+    border-bottom: 1px solid rgb(237, 237, 250);
+    background-color: rgb(242, 250, 252);
+}
+.newEmail .body {
+    height: 60%;
+    border: 0;
+    outline: none;
+    background-color: rgb(242, 250, 252);
+}
+
+.newEmail button {
+    width: 100%;    
+    height: 10%;
+    border: 0;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    font-weight: bold;
+    font-family: 'Poppins', sans-serif;
 }
