--- a/frontend/src/Outbox/style.module.css
+++ b/frontend/src/Outbox/style.module.css
@@ -62,6 +62,10 @@
 
 }
 
+.outbox table tr .trash:hover {
+    background-color: aqua;
+    }
+
 .outbox table tr .date {
     width: 10vw;
     font-size: 1.5rem;
