--- a/frontend/src/Content/style.module.css
+++ b/frontend/src/Content/style.module.css
@@ -9,13 +9,13 @@
 .content {
   display: flex;
   background-color: rgb(242, 250, 252);
-  padding-left: 25px;
+  /* padding-left: 5px; */
   padding-right: 25px;
 }
 .newEmail {
-  position: absolute;
+  position: fixed;
   bottom: 15px;
-  left: 20vw;
+  left: 60vw;
   height: 60vh;
   width: 35vw;
   background-color: rgb(242, 250, 252);
