--- a/frontend/src/Toolbar/style.module.css
+++ b/frontend/src/Toolbar/style.module.css
@@ -15,18 +15,18 @@
     position: sticky;
     align-items: center;
     top: 15vh;
-    
 }
 .toolbar button{
-    width: 13vw;
+    width: 11vw;
     height: 50px;
     border-radius: 100px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     background-color: rgb(242, 250, 252);
     border: 0;
+    padding: 8px;
 }
 .toolbar button:hover{
     background-color: rgb(237, 237, 250);
