--- a/frontend/src/Login/style.module.css
+++ b/frontend/src/Login/style.module.css
@@ -39,6 +39,15 @@
     border-radius: 4px;
     cursor: pointer;
   }
+  .registrationBtn {
+    background-color: #61dafb;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 40%;
+  }
   
   .loginBtn:hover {
     background-color: #4fa3d1;
